cmake_minimum_required(VERSION 2.8.4)
project(Training)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES problem3.cpp)
set(SOURCE_FILES problem4.cpp)
set(SOURCE_FILES problem5.cpp)
set(SOURCE_FILES problem6.cpp)
set(SOURCE_FILES problem7.cpp)
set(SOURCE_FILES problem8.cpp)
set(SOURCE_FILES problem9.cpp)
set(SOURCE_FILES problem10.cpp)
set(SOURCE_FILES problem11.cpp)
set(SOURCE_FILES problem12.cpp)
set(SOURCE_FILES problem13.cpp)
set(SOURCE_FILES problem14.cpp)
set(SOURCE_FILES problem15.cpp)
add_executable(Training ${SOURCE_FILES})